...
        android:src="@drawable/soil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_subheading" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryButton"
        android:layout_marginTop="32dp"
        android:drawableEnd="@drawable/round_arrow_right_alt_24"
        android:text="@string/get_started"
...
