...
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingTop="50dp">


            <TextView
                android:id="@+id/home_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_extrabold"
                android:text="@string/hello"
                android:textSize="39sp"
                app:layout_constraintEnd_toEndOf="parent"
...
